--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@astrojs/react": "^3.0.7",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "animate.css": "^4.1.1",
     "astro": "^4.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sass": "^1.69.5",
     "typescript": "^5.3.3"
   }
 }
